@@ -11,5 +11,6 @@ t/16_init.t
 t/17_get_accessor.t
 t/18_setgetuniqarray.t
 t/19_setgetuniqarray.t
+t/20_setgetuniquearray.t
 t/Person.pm
 META.yml                                 Module meta-data (added by MakeMaker)
