@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               LEOCHARRE-Class2
-version:            1.17
+version:            1.18
 abstract:           ~
 author:  []
 license:            perl
